# employee-management-system-rust

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  compose.yml
assets/: tailwind.css
database/: README.md
database/data/: 04-employee-data.sql  05-auth-data.sql
database/init/: 01-init.sql
database/schema/: 02-default-schema.sql  03-auth-schema.sql
docs/readmes/: DATABASE_README.md  GITHUB_README.md  RUST_MODULE_SYSTEM_README.md  SQLX_README.md  WORKSPACE_README.md
src/: main.rs
src/components/: mod.rs
src/components/layout/: footer.rs  navbar.rs
src/components/tables/: employee_table.rs  mod.rs
src/models/: auth.rs  employee.rs  mod.rs
src/server/: db.rs  mod.rs
src/views/: employee_view.rs  home.rs  mod.rs
